--- a/creative-agency.css
+++ b/creative-agency.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    13/03/2024
+Last change:    22/05/2024
 Author:    creativemaze
 Primary use:    Creative Agency
 -------------------------------------------------------------------*/
@@ -119,7 +119,7 @@ ul{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
@@ -141,7 +141,7 @@ ul{
 	text-align: center;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	margin-top: 26px;
+	margin-top: 30px;
 }
 
 .navbar-header > a:hover{
@@ -169,6 +169,7 @@ nav.navbar.bootsnav{
 
 nav.navbar.bootsnav ul.nav{
 	margin-right: 160px;
+	margin-top: 5px;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -200,7 +201,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -243,14 +244,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #ec2F4B;
+    color: #ec2f4b;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -264,7 +265,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .attr-nav > ul > li > a{
     color: #111111;
-	padding-top: 30px;
+	padding-top: 36px;
 	margin-left: -12px;
 	position: relative;
 	left: -160px;
@@ -316,7 +317,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas,
 .left_info .far,
-.right_info .fab{
+.right_info > a > .fab{
 	font-size: 16px;
 	color: #111111;
 }
@@ -326,13 +327,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-right: 8px;
 }
 
-.right_info > a{
+.right_info > a .fab{
 	padding-right: 14px;
 }
 
-.left_info .fas:hover,
-.right_info .fab:hover{
-	opacity: 0.6;
+.right_info > a > .fab:hover{
+	color: #ec2f4b;
 }
 
 .sub_width{
@@ -368,33 +368,40 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .head_btn{
-	max-width: 300px;
+	max-width: 450px;
 	display: inline-block;
 	position: absolute;
-	top: 15px;
+	top: 19px;
 	right: 0;
 }
 
 .head_btn a{
-	background-color: #ec2F4B;
-	width: 150px;
-	margin: 0 auto;
-    color: #ffffff;
-    padding: 12px 14px;
+	width: auto;
+	margin: 5px auto 0;
+    color: #ec2f4b;
     text-decoration: none;
 	text-transform: uppercase;
-    display: block;
-    font-size: 13px;
+    display: inline-block;
+    font-size: 14px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #ec2F4B;
+	border-bottom: 2px solid #ec2f4b;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
+.head_btn a::after{
+	content: "\203A";
+	position: relative;
+	top: 1px;
+	font-size: 20px;
+	display: inline-block;
+	padding-left: 5px;
+	margin-right: -3px;
+}
+
 .head_btn a:hover{
-	background-color: transparent;
 	color: #111111;
 	border-color: #111111;
 }
@@ -442,12 +449,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .color_main{
-	color: #ec2F4B;
+	color: #ec2f4b;
 	box-shadow: inset 0 -28px 0 #111111;
 }
 
 .first_word{
-	box-shadow: inset 0 -0.38em 0 #ec2F4B;
+	box-shadow: inset 0 -0.38em 0 #ec2f4b;
 }
 
 .header-title__sub{
@@ -455,7 +462,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 16px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
@@ -490,8 +497,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .left_btn{
-	color: #ec2F4B;
-	border-bottom: 2px solid #ec2F4B;
+	color: #ec2f4b;
+	border-bottom: 2px solid #ec2f4b;
 }
 
 .left_btn:hover{
@@ -505,8 +512,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .right_btn:hover{
-	color: #ec2F4B;
-	border-color: #ec2F4B;
+	color: #ec2f4b;
+	border-color: #ec2f4b;
 }
 
 /* 3. MAIN CONTENT
@@ -577,7 +584,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: left;
 	text-transform: uppercase;
@@ -641,14 +648,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .creative_title::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e941";
-	font-weight: 300;
-	font-size: 30px;
+	font-family: 'uicons-thin-straight';
+	content: "\fc0d";
+	font-weight: 100;
+	font-size: 26px;
 	position: relative;
 	top: 10px;
-	padding-right: 5px;
-	color: #ec2F4B;
+	padding-right: 12px;
+	color: #ec2f4b;
 }
 
 .creative_col_button a{
@@ -678,8 +685,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .creative_col_button a:hover{
-	color: #ec2F4B;
-	border-color: #ec2F4B;
+	color: #ec2f4b;
+	border-color: #ec2f4b;
 }
 
 .color_info_area{
@@ -739,7 +746,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	overflow: hidden;
 	padding: 30px 20px;
-	background-color: #ec2F4B;
+	background-color: #ec2f4b;
 }
 
 .white_bottom_box{
@@ -750,25 +757,25 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-color: #f6f6f6;
 }
 
-.box_checkbox::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 700;
-	font-size: 25px;
+.box_check .fi::before{
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-weight: 200;
+	font-size: 22px;
 	border: solid 1px #ffffff;
 	border-radius: 50%;
-	padding: 4px 8px;
+	padding: 10px;
 	color: #ffffff;
 }
 
-.last_checkbox::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e5ca";
-	font-weight: 700;
-	font-size: 25px;
+.box_check .fi.last_checkbox::before{
+	font-family: 'uicons-regular-straight';
+	content: "\fb2b";
+	font-weight: 200;
+	font-size: 22px;
 	border: solid 1px #111111;
 	border-radius: 50%;
-	padding: 4px 8px;
+	padding: 10px;
 	color: #111111;
 }
 
@@ -888,8 +895,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-right: -20px;
 	width: 250px;
 	height: 100px;
-	border-top: double 5px #ec2F4B;
-	border-right: double 5px #ec2F4B;
+	border-top: double 5px #ec2f4b;
+	border-right: double 5px #ec2f4b;
 }
 
 .right_col_area{
@@ -986,21 +993,23 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 15px;
 	font-weight: normal;
 	display: block;
-	color: #d2d2d2;
+	color: #dddddd;
 	letter-spacing: 1px;
 	text-align: left;
 	line-height: 1.5em;
 }
 
-.left_icon_symbol .material-symbols-outlined.icon-60{
-	font-size: 60px;
+.left_icon_symbol .fi{
+	font-size: 44px;
 	font-weight: 100;
+	width: 70px;
+	height: 70px;
 	background-color: #ffffff;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	display: inline-block;
 	text-align: center;
-	margin-top: 10px;
-	padding: 7px;
+	margin-top: 16px;
+	padding: 9px;
 	border-radius: 50%;
 }
 
@@ -1026,15 +1035,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.5em;
 }
 
-.right_icon_symbol .material-symbols-outlined.icon-60{
-	font-size: 60px;
-	font-weight: 100;
-	background-color: #ec2F4B;
+.right_icon_symbol .fi{
+	font-size: 44px;
+	width: 70px;
+	height: 70px;
+	background-color: #ec2f4b;
 	color: #ffffff;
 	display: inline-block;
 	text-align: center;
-	margin-top: 10px;
-	padding: 7px;
+	margin-top: 16px;
+	padding: 9px;
 	border-radius: 50%;
 }
 
@@ -1062,7 +1072,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .left_icon_col .icon_button a:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 .right_icon_col .icon_button a{
@@ -1073,7 +1083,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: left;
 	text-transform: uppercase;
 	display: inline-block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	text-decoration: none;
 	max-width:110px;
 	transition: 0.5s;
@@ -1149,7 +1159,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: auto;
 	width: 100px;
 	height: 100px;
-	background-color: #ec2F4B;
+	background-color: #ec2f4b;
 	border-radius: 50%;
 }
 
@@ -1213,7 +1223,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	text-transform: uppercase;
 	display: inline-block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	text-decoration: none;
 	max-width: 120px;
 	margin: auto;
@@ -1246,13 +1256,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex-wrap: wrap;
 }
 
-.square_left_col{
+.square_col_left{
 	flex: 58.33%;
 	width: 58.33%;
 	padding: 0 20px;
 }
 
-.square_right_col{
+.square_col_right{
 	flex: 41.66%;
 	width: 41.66%;
 	padding: 0 20px;
@@ -1275,7 +1285,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: left;
 	text-transform: uppercase;
@@ -1385,7 +1395,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .portfolio_content a:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 .square_icon{
@@ -1399,10 +1409,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-left: 10px;
 }
 
-.square_icon .material-symbols-outlined{
-	font-size: 50px;
-	font-weight: 100;
-	color: #ec2F4B;
+.square_icon .fi{
+	font-size: 34px;
+	color: #ec2f4b;
 	display: block;
 	text-align: left;
 }
@@ -1447,8 +1456,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .square_col_button a:hover{
-	color: #ec2F4B;
-	border-color: #ec2F4B;
+	color: #ec2f4b;
+	border-color: #ec2f4b;
 }
 
 /* --- 3.6. Creative Area Six --- */
@@ -1521,7 +1530,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .counter.letter::after{
 	content:'k';
 	font-size: 50px;
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 .mid_info{
@@ -1544,7 +1553,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 50px;
 	height: 1px;
 	margin: auto;
-	border-bottom: double 5px #ec2F4B;
+	border-bottom: double 5px #ec2f4b;
 	margin-top: 8px;
 }
 
@@ -1590,7 +1599,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .numeric{
-	background-color: #ec2F4B;
+	background-color: #ec2f4b;
 	padding: 12px;
 	color: #ffffff;
 	overflow: auto;
@@ -1640,7 +1649,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 a.blog_btn{
 	max-width: 110px;	
-    color: #ec2F4B;
+    color: #ec2f4b;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1714,7 +1723,7 @@ a.blog_btn:hover{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: left;
 	text-transform: uppercase;
@@ -1782,7 +1791,7 @@ a.blog_btn:hover{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	letter-spacing: 1px;
 	text-align: left;
 	text-transform: uppercase;
@@ -1811,7 +1820,7 @@ a.blog_btn:hover{
 
 .quote_format{
 	font-size: 130px;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	display: inline-block;
 	text-align: center;
 	bottom: -65px;
@@ -1833,7 +1842,7 @@ a.blog_btn:hover{
 	width: auto;
 	display: inline-block;
 	overflow: hidden;
-	color: #ec2F4B;
+	color: #ec2f4b;
 	cursor: pointer;
 }
 
@@ -1886,7 +1895,7 @@ a.blog_btn:hover{
 .bg_col_button a{
 	width: auto;
 	margin: 20px auto 0;
-    color: #ec2F4B;
+    color: #ec2f4b;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1894,7 +1903,7 @@ a.blog_btn:hover{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border-bottom: 2px solid #ec2F4B;
+	border-bottom: 2px solid #ec2f4b;
 	letter-spacing: 1px;
 	text-align: center;
 }
@@ -1982,7 +1991,7 @@ a.footer-logo img{
 
 .footer_social > a > .fab:hover,
 .footer_social > a > .fa:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 .footer_col > h4{
@@ -2009,7 +2018,7 @@ a.footer-logo img{
 }
 
 .footer_col > ul > li a:hover{
-	color: #ec2F4B;
+	color: #ec2f4b;
 }
 
 .right_list{
@@ -2100,7 +2109,7 @@ a.footer-logo img{
 	}
 	
 	.head_btn{	
-		margin-top: 40px;
+		margin-top: 20px;
 		position: relative;
 		left: 50%;
 		transform: translateX(-50%);
@@ -2201,13 +2210,13 @@ a.footer-logo img{
 		width: 50%;
 	}
 	
-	.square_left_col{
+	.square_col_left{
 		flex: 100%;
 		width: 100%;
 		max-width: 700px;
 	}
 	
-	.square_right_col{
+	.square_col_right{
 		flex: 100%;
 		width: 100%;
 		margin-top: 50px;
@@ -2254,8 +2263,8 @@ a.footer-logo img{
 	
 	.info_col,
 	.info_box,
-	.square_left_col,
-	.square_right_col,
+	.square_col_left,
+	.square_col_right,
 	.square_box,
 	.review_col_right,
 	.review_col_left,
@@ -2284,10 +2293,6 @@ a.footer-logo img{
 	.white_bottom_box{
 		max-width: 150px;
 		padding: 20px 10px 15px;
-	}
-	
-	.box_check{
-		margin-top: -1px;
 	}
 	
 	.box_content h3{
@@ -2364,20 +2369,14 @@ a.footer-logo img{
 	}
 }
 
-@media only screen and (max-width: 390px){
-	.box_check{
-		margin-top: 2px;
-	}
-	
-	.box_checkbox::before{
-		font-size: 22px;
-		padding: 4px 6px;
-	}
-}
-
 @media only screen and (max-width: 360px){
 	.video-play-button{
 		margin-left: 40px;
+	}
+	
+	.box_check .fi::before,
+	.box_check .fi.last_checkbox::before{
+		font-size: 18px;
 	}
 	
 	.left_icon_symbol{
