--- a/technology.css
+++ b/technology.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    16/03/2024
+Last change:    23/05/2024
 Author:    creativemaze
 Primary use:    Technology
 -------------------------------------------------------------------*/
@@ -190,7 +190,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #1488CC;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -233,14 +233,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #1488CC;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #1488CC;
+    color: #1488cc;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -306,7 +306,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas,
 .left_info .far,
-.right_info .fab{
+.right_info > a > .fab{
 	font-size: 16px;
 	color: #ffffff;
 	transition: 0.5s;
@@ -317,13 +317,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-right: 8px;
 }
 
-.right_info > a{
+.right_info > a .fab{
 	padding-right: 14px;
 }
 
-.left_info .fas:hover,
-.right_info .fab:hover{
-	opacity: 0.6;
+.right_info > a > .fab:hover{
+	color: #dddddd;
 }
 
 .sub_width{
@@ -369,7 +368,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .head_btn a{
 	background-color: #ffffff;
 	width: 150px;
-    color: #1488CC;
+    color: #1488cc;
     padding: 12px 14px;
     text-decoration: none;
 	text-transform: uppercase;
@@ -422,7 +421,7 @@ svg {
 	overflow: hidden;
 	min-height: 700px;
 	background-color: rgba(8, 0, 103, 1);
-	background-image: linear-gradient(to right, #2B32B2, #1488CC);
+	background-image: linear-gradient(to right, #2B32B2, #1488cc);
 	text-shadow: 0 2px 20px rgba(0, 0, 0, 0.16);
 }	
 
@@ -507,7 +506,7 @@ svg {
 	font-size: 16px;
 	font-weight: normal;
 	display: block;
-	color: #f2f2f2;
+	color: #dddddd;
 	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: left;
@@ -547,7 +546,7 @@ svg {
 	padding: 0;
 	height: 40px;
 	width: 130px;
-	color: #1488CC;
+	color: #1488cc;
 	margin: 0;
 	border-radius: 25px;
 	transition: 0.5s;
@@ -617,7 +616,7 @@ svg {
 }
 
 .right_btn a{
-	background-color: #1488CC;
+	background-color: #1488cc;
 	width: 150px;
     color: #ffffff;
     padding: 13px 14px;
@@ -628,7 +627,7 @@ svg {
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #1488CC;
+	border: 1px solid #1488cc;
 	letter-spacing: 1px;
 	border-radius: 25px;
 	text-align: center;
@@ -716,7 +715,7 @@ svg {
 	margin: auto;
 	overflow: auto;
 	border-radius: 5px;
-	background-color: #1488CC;
+	background-color: #1488cc;
 }
 
 .grid_title h3{
@@ -772,7 +771,7 @@ svg {
 	text-align: left;
 	text-transform: uppercase;
 	display: inline-block;
-	color: #1488CC;
+	color: #1488cc;
 	text-decoration: none;
 	max-width: 110px;
 	transition: 0.5s;
@@ -818,14 +817,15 @@ svg {
 	text-align: center;
 }
 
-.icon_symbol .material-symbols-outlined.icon-65{
-	font-size: 65px;
-	font-weight: 100;
-	background-color: #1488CC;
+.icon_symbol .fi{
+	font-size: 44px;
+	width: 75px;
+	height: 75px;
+	background-color: #1488cc;
 	color: #ffffff;
 	display: inline-block;
 	text-align: center;
-	padding: 9px;
+	padding: 12px;
 }
 
 .icon_content{
@@ -867,7 +867,7 @@ svg {
 	text-align: center;
 	text-transform: uppercase;
 	display: inline-block;
-	color: #1488CC;
+	color: #1488cc;
 	text-decoration: none;
 	max-width: 110px;
 	margin: auto;
@@ -1046,7 +1046,7 @@ svg {
 }
 
 .bg_col_button a{
-	background-color: #1488CC;
+	background-color: #1488cc;
 	width: 150px;
 	margin: 30px 0 0;
     color: #ffffff;
@@ -1058,7 +1058,7 @@ svg {
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #1488CC;
+	border: 1px solid #1488cc;
 	border-radius: 25px;
 	letter-spacing: 1px;
 	text-align: center;
@@ -1068,22 +1068,6 @@ svg {
 	color: #111111;
 	background-color: #ffffff;
 	border-color: #ffffff;
-}
-
-.bg_col:not(:active) .bg_num{
-	opacity: 0;
-}
-
-.bg_col.active .bg_num{
-	opacity: 1;
-}
-
-.bg_col:not(:active) .bg_content{
-	opacity: 0;
-}
-
-.bg_col.active .bg_content{
-	opacity: 1;
 }
 
 /* --- 3.4. Technology Area Four --- */
@@ -1238,14 +1222,14 @@ svg {
 }
 
 .square_list > ul > li::first-letter{
-	background-color: #1488CC;
+	background-color: #1488cc;
 	padding: 12px 14px;
 	color: #ffffff;
 	margin-right: 4px;
 }
 
 .square_col_button a{
-	background-color: #1488CC;
+	background-color: #1488cc;
 	width: 150px;
 	margin: 35px 0 0;
     color: #ffffff;
@@ -1257,7 +1241,7 @@ svg {
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #1488CC;
+	border: 1px solid #1488cc;
 	border-radius: 25px;
 	letter-spacing: 1px;
 	text-align: center;
@@ -1381,7 +1365,7 @@ svg {
 
 .panel{
 	padding: 0;
-	background-color: #1488CC;
+	background-color: #1488cc;
 	max-height: 0;
 	overflow: hidden;
 	transition: max-height 0.2s ease-out;
@@ -1453,7 +1437,7 @@ svg {
 }
 
 .news_btn a{
-	background-color: #1488CC;
+	background-color: #1488cc;
 	width: 150px;
     color: #ffffff;
     padding: 13px 14px;
@@ -1464,7 +1448,7 @@ svg {
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #1488CC;
+	border: 1px solid #1488cc;
 	letter-spacing: 1px;
 	border-radius: 25px;
 	text-align: center;
@@ -1500,7 +1484,7 @@ svg {
 	font-size: 13px;
 	display: block;
 	font-weight: 600;
-	color: #1488CC;
+	color: #1488cc;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
@@ -1549,7 +1533,7 @@ svg {
 
 a.blog_btn{
 	max-width: 110px;	
-    color: #1488CC;
+    color: #1488cc;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1595,7 +1579,7 @@ a.blog_btn:hover{
 	overflow: hidden;
 	min-height: 350px;
 	background-color: rgba(8, 0, 103, 1);
-	background-image: linear-gradient(to right, #2B32B2, #1488CC);
+	background-image: linear-gradient(to right, #2B32B2, #1488cc);
 	text-shadow: 0 2px 20px rgba(0, 0, 0, 0.16);
 }
 
@@ -1791,12 +1775,12 @@ a.footer-logo img{
 	
 	.head_btn a{
 		background-color: transparent;
-		border-color: #1488CC;
+		border-color: #1488cc;
 	}
 	
 	.head_btn a:hover{
-		background-color: #1488CC;
-		border-color: #1488CC;
+		background-color: #1488cc;
+		border-color: #1488cc;
 		color: #ffffff;
 	}
 	
