--- a/start-up.css
+++ b/start-up.css
@@ -325,6 +325,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .right_info > a .fab{
 	padding-right: 14px;
+	transition: 0.5s;
 }
 
 .right_info > a > .fab:hover{
