--- a/consulting.css
+++ b/consulting.css
@@ -546,15 +546,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 }
 
-.icon_symbol span.icon-65{
-	font-size: 65px;
-	font-weight: 100;
+.icon_symbol .fi{
+font-size: 44px;
+	width: 75px;
+	height: 75px;
 	background-color: #ec2f4b;
 	color: #ffffff;
 	display: inline-block;
 	margin-top: -40px;
 	text-align: center;
-	padding: 9px;
+	padding: 12px;
 }
 
 .icon_info{
@@ -699,16 +700,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 7px 0;
 }
 
 .info_list > ul > li::before{
-	font-family: 'Material Symbols Outlined';
-	content: "\e86c";
-	font-weight: 200;
-	font-size: 30px;
+	font-family: 'uicons-thin-straight';
+	content: "\fa38";
+	font-size: 26px;
+	font-weight: 100;
 	position: relative;
 	top: 10px;
-	padding-right: 10px;
+	padding-right: 12px;
 	color: #ec2f4b;
 }
 
@@ -1549,8 +1551,8 @@ a.blog_btn:hover{
 	text-transform: uppercase;
 }
 
-.client_icon span.icon-25{
-	font-size: 25px;
+.client_icon .fi{
+	font-size: 22px;
 	font-weight: 300;
 	color: #ec2f4b;
 	display: inline-block;
