--- a/marketing.css
+++ b/marketing.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    23/03/2024
+Last change:    24/05/2024
 Author:    creativemaze
 Primary use:    Marketing
 -------------------------------------------------------------------*/
@@ -24,7 +24,6 @@ Primary use:    Marketing
 	3.6. Marketing Area Six
 	3.7. Marketing Area Seven
 	3.8. Marketing Area Eight
-	3.9. Marketing Area Nine
 	 
 4. Footer
 5. Responsive
@@ -363,7 +362,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transition: 0.5s;
 }
 
-.right_info a .fas{
+.right_info .fas{
 	font-size: 16px;
 	color: #ffffff;
 	padding-right: 8px;
@@ -699,7 +698,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 	margin: auto;
 	text-align: center;
-	
 }
 
 .num_area{
@@ -932,7 +930,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 20px 0;
 }
 
-.square_list > ul > li::first-letter{
+.square_list > ul > li .first-letter{
 	background-color: #e53935;
 	padding: 12px 14px;
 	color: #ffffff;
@@ -966,102 +964,103 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.3. Marketing Area Three --- */
 .marketing_area_three{
+	width: 100%;
 	min-height: 400px;
 	padding: 6em 25px;
 	background-color: #eeeeee;
+	border-bottom: solid 1px #e0e0e0;
 	margin-bottom: 9em;
 }
 
 .marketing_group_three{
-	max-width: 1200px;
+	max-width: 1400px;
 	margin: 0 auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-bottom: 25px;
+	padding-bottom: 40px;
 }
 
-.icon_col{
+.grid_col{
 	flex: 25%;
 	width: 25%;
-	padding: 40px 25px 0;
+	padding: 40px 20px 0;
 }
 
-.icon_box{
-	max-width: 250px;
-	margin: auto;
+.grid_box{
+	position: relative;
 	text-align: center;
-	padding-top: 15px;
-	background-color: #ffffff;
+	max-width: 350px;
+	margin: 0 auto;
 }
 
-.icon_content{
+.grid_image{
+	overflow: hidden;
+	position: relative;
+}
+
+.grid_image img{
 	width: 100%;
-	background-color: #ffffff;
-	padding: 0 0 20px;
-	text-align: center;
-	transition: ease-in-out 0.5s;
-	margin-top: -20px;
+	height: auto;
+	display: block;
 }
 
-.icon_symbol .material-symbols-outlined.icon-80{
-	font-size: 80px;
-	font-weight: 100;
+.grid_overlay{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.grid_icon{
+	position: absolute;
+	top: 20px;
+	left: 20px;
+}
+
+.grid_icon .fi{
+	font-size: 44px;
+	width: 70px;
+	height: 70px;
+	background-color: #ffffff;
 	color: #e53935;
 	display: inline-block;
 	text-align: center;
-	transition: ease-in-out 0.5s;
+	padding: 9px;
+	border-radius: 50%;
 }
 
-.icon_content h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
-	font-weight: 600;
-	display: block;
-	color: #111111;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.4em;
+.grid_content{
+	position: absolute;
+	bottom: 25px;
+	left: 20px;
+	max-width: 400px;
 }
 
-.icon_content p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.5em;
-	padding: 8px 12px;
+.grid_content h3{
+	margin: 0;
 }
 
-.icon_button a{
+.grid_content h3 a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 600;
-	letter-spacing: 1px;
-	text-align: center;
+	display: block;
+	color: #ffffff;
+	text-align: left;
 	text-transform: uppercase;
-	display: inline-block;
-	color: #e53935;
 	text-decoration: none;
-	max-width: 105px;
-	margin: 0 auto;
+	letter-spacing: 1px;
+	line-height: 1.4em;
 	transition: 0.5s;
 }
 
-.icon_button a::after{
-	content: "\203A";
-	position: relative;
-	top: 1px;
-	font-size: 20px;
-	display: inline-block;
-	padding-left: 5px;
-}
-
-.icon_button a:hover{
-	color: #111111;
+.grid_content h3 a:hover{
+	color: #e53935;
 }
 
 /* --- 3.4. Marketing Area Four --- */
@@ -1244,10 +1243,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.5. Marketing Area Five --- */
 .marketing_area_five{
 	position: relative;
-	min-height: 475px;
+	min-height: 400px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	padding: 7em 25px 14em;
+	margin-bottom: 9em;
 }
 
 .marketing_area_five::before {
@@ -1257,152 +1258,104 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
+	background: rgba(24, 25, 34, 0.6);
 }
 
-/* --- 3.6. Marketing Area Six --- */
-.marketing_area_six{
+.marketing_group_five{
+	max-width: 1240px;
+	margin: 0 auto;
 	position: relative;
-	z-index: 1;
-	max-width: 1200px;
-	margin: -350px auto 9em;
-	padding: 0 25px;
+	z-index: 999;
+	text-align: center;
 }
 
-.marketing_group_six{
+.comment_group{
 	width: 100%;
-	padding: 40px 10px 0;
-	background-color: #ffffff;
-	margin: 40px 0;
-	border-left: solid 5px #e53935;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: -65px;
 }
 
 .client_col{
-	padding: 0 25px
+	flex: 50%;
+	width: 50%;
+	padding: 0 20px;
 }
 
-.client_comment p{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 16px;
-	font-weight: 500;
-	display: inline-block;
-	color: #696969;
-	letter-spacing: 1px;
+.client_details{
+	max-width: 640px;
+	padding: 20px;
 	text-align: center;
-	line-height: 1.5em;
-}
-
-.client_comment p::before{
-	content: '\275D';
-	position: relative;
-	top: 10px;
-	padding-right: 5px;
-	font-size: 45px;
-	color: #e53935;
+	background: rgba(0,0,0,0.5);
+	border-left: solid 4px #e53935;
 }
 
 .client_info{
-	margin: 30px auto 0;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
-	background-color: #ffffff;
-	padding: 30px;
-	max-width: 250px;
-}
-
-.client_info img{
-	max-width: 90px;
-	height: 90px;
-	margin: auto;
-	border-radius: 50%;
-	display: block;
-	text-align: center;
+	margin-bottom: -130px;
+	clear: both;
 }
 
 .client_name{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 600;
 	display: block;
-	color: #111111;
+	color: #ffffff;
 	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.4em;
-}
-
-.client_title{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 600;
-	display: block;
-	color: #e53935;
-	letter-spacing: 1px;
-	text-align: center;
-	text-transform: uppercase;
+	text-align: left;
 	line-height: 1.4em;
 	margin: 0;
+	padding: 11px 0;
+}
+
+.client_details p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	display: block;
+	color: #dddddd;
+	letter-spacing: 1px;
+	text-align: left;
+	padding: 15px;
+	line-height: 1.5em;
+}
+
+.client_photo img{
+	max-width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	display: block;
+	text-align: left;
+}
+
+.quote_format{
+	font-size: 130px;
+	margin-top: -35px;
+	color: #e53935;
+	display: block;
+	text-align: center;
 }
 
 .client_icon{
-	display: block;
-	text-align: center;
-	padding-top: 8px;
+	width: 100%;
+	text-align: left;
 }
 
-.client_icon .material-symbols-outlined.icon-25{
-	font-size: 25px;
-	font-weight: 300;
+.client_icon .fi{
+	font-size: 22px;
 	color: #e53935;
 	display: inline-block;
 	text-align: center;
 }
 
-.slick-dots {
-	position: relative;
-	z-index: 999999;
-	left: 50%;
-	transform: translateX(-50%);
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	padding: 1rem 0;
-	list-style-type: none;
-}
-
-.slick-dots button{
-	display: block;
-	width: 1.3rem;
-	height: 1.3rem;
-	padding: 0;		
-	border: solid 1px #6f6f6f;
-	border-radius: 100%;
-	background-color: transparent;
-	text-indent: -9999px;
-}
-
-li.slick-active button{
-	background-color: #e53935;
-}
-
-.slick-dots button:hover{
-	background-color: #e53935;
-}
-
-.slick-dots li{
-	margin: 22px 4px 0 4px;
-}
-
-.marketing_area_six .slick-list{
-	overflow: visible;
-}
-
-/* --- 3.7. Marketing Area Seven --- */
-.marketing_area_seven{
+/* --- 3.6. Marketing Area Six --- */
+.marketing_area_six{
 	max-width: 1280px;
 	margin: 0 auto 9em;
 	padding: 0 25px;
 }
 
-.marketing_group_seven{
+.marketing_group_six{
 	width: 100%;
 	display: flex; 
 	flex-wrap: wrap;
@@ -1559,8 +1512,8 @@ a.blog_btn:hover{
 	color: #111111;
 }
 
-/* --- 3.8. Marketing Area Eight --- */
-.marketing_area_eight{
+/* --- 3.7. Marketing Area Seven --- */
+.marketing_area_seven{
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -1573,17 +1526,17 @@ a.blog_btn:hover{
 	background-position: center;
 }
 
-.marketing_area_eight::before {
+.marketing_area_seven::before {
 	content: '';
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
+	background: rgba(24, 25, 34, 0.6);
 }
 
-.marketing_group_eight{
+.marketing_group_seven{
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 20px;
@@ -1608,8 +1561,7 @@ a.blog_btn:hover{
 .count_num{
 	width: 140px;
 	height: 140px;
-	background-color: #ffffff;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	background: rgba(0, 0, 0, 0.5);
 	padding: 15px;
 	overflow: hidden;
 	text-align: center;
@@ -1628,7 +1580,7 @@ a.blog_btn:hover{
 	font-weight: 800;
 	display: inline-block;
 	text-align: left;
-	color: #111111;
+	color: #ffffff;
 	letter-spacing: 1px;
 	line-height: 1.2em;
 	text-transform: uppercase;
@@ -1665,8 +1617,8 @@ a.blog_btn:hover{
 	margin-top: 8px;
 }
 
-/* --- 3.9. Marketing Area Nine --- */
-.marketing_area_nine{
+/* --- 3.8. Marketing Area Eight --- */
+.marketing_area_eight{
 	max-width: 1100px;
 	width: calc(100% - 50px);
 	margin: -7em auto 2em;
@@ -1682,7 +1634,7 @@ a.blog_btn:hover{
 	align-items: center;
 }
 
-.marketing_group_nine{
+.marketing_group_eight{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1744,13 +1696,14 @@ a.blog_btn:hover{
 	font-weight: 600;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	border: none;
 	padding: 0;
 	height: 40px;
 	width: 130px;
 	color: #ffffff;
 	margin: 0;
 	border-radius: 5px;
+	position: relative;
+	bottom: -1px;
 	transition: 0.5s;
 	background-color: #e53935;
 	border: solid 1px #e53935;
@@ -2045,9 +1998,18 @@ a.footer-logo img{
 		width: 100%;
 	}
 	
-	.icon_col{
+	.grid_col{
 		flex: 50%;
 		width: 50%;
+	}
+	
+	.client_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.last_space{
+		padding-top: 115px;
 	}
 	
 	.info_head{
@@ -2139,7 +2101,7 @@ a.footer-logo img{
 		width: 100%;
 	}
 	
-	.icon_col{
+	.grid_col{
 		flex: 100%;
 		width: 100%;
 	}
@@ -2189,7 +2151,9 @@ a.footer-logo img{
 }
 
 @media only screen and (max-width: 420px){
+	.grid_col,
 	.portfolio_box,
+	.client_col,
 	.blog_col{
 		padding-left: 0;
 		padding-right: 0;
@@ -2203,10 +2167,6 @@ a.footer-logo img{
 	.slide_center{
 		width: 180px;
 		height: 180px;
-	}
-	
-	.client_col{
-		padding: 0 15px;
 	}
 	
 	.slide_photo{
